--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-        content="Repositorio académico para seguimiento de tareas semanales del estudiante Yeims Abraham Sarmiento Mosquera.">
-  <title>Repositorio de Tareas - Yeims Sarmiento</title>
+  <title>Repositorio Académico - Yeims Sarmiento</title>
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <aside id="sidebar">
-    <nav aria-label="Menú principal">
+    <nav>
       <ul>
         <li><a href="#info-title">Información del Estudiante</a></li>
         <li><a href="#semanas">Tareas por Semana</a></li>
@@ -31,7 +29,7 @@
   </header>
 
   <section class="info-estudiante" aria-labelledby="info-title">
-    <h2 id="info-title">👤 Información del Estudiante</h2>
+    <h2 id="info-title"><span class="info-icon">👤</span> Información del Estudiante</h2>
     <ul>
       <li><strong>Nombre:</strong> Yeims Abraham Sarmiento Mosquera</li>
       <li><strong>Código:</strong> s03807f</li>
@@ -43,12 +41,14 @@
   </section>
 
   <main id="semanas">
-    <h2>📅 Tareas por Semana</h2>
+    <h2><span class="semanas-icon">📅</span> Tareas por Semana</h2>
     <div id="contenedor-semanas"></div>
   </main>
 
+  <div id="modal-tarea" class="modal-tarea"></div>
+
   <footer>
-    <p>&copy; 2025 Universidad Nacional - Repositorio de Tareas</p>
+    <p>© 2025 Universidad Nacional - Repositorio de Tareas</p>
   </footer>
 
   <script src="script.js"></script>
